# Cpp_Mini_Backend_FrameWork

./: CMakeLists.txt  README.md
include/: Request.hpp  Response.hpp  Router.hpp  Server.hpp
include/deserializer/: Deserializing.hpp
include/handler/: handler.hpp
include/middleware/: middleware.hpp
include/serializer/: Serializing.hpp
include/structs/: Struct.hpp
include/threads/: ThreadPool.hpp
include/type/: ResponseData.hpp  RouterType.hpp  Value.hpp
src/: Request.cpp  Response.cpp  Router.cpp  Server.cpp
src/structs/: Struct.cpp
src/threads/: ThreadPool.cpp
